--- a/appveyor.yml
+++ b/appveyor.yml
@@ -29,6 +29,10 @@ environment:
       TOOLSET: msvc-14.2
       ADDRMD: 32,64
       CXXSTD: 14,17,latest
+    - APPVEYOR_BUILD_WORKER_IMAGE: Visual Studio 2019
+      TOOLSET: clang-win
+      ADDRMD: 64
+      CXXSTD: 14,17,latest
 
 install:
   - set BOOST_BRANCH=develop
